--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,11 +18,11 @@ en:
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Confirmation Instructions"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Reset Password Instructions"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Unlock Instructions"
       email_changed:
         subject: "Email Changed"
       password_change:
