--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,6 @@ en:
   date:
     formats:
       ynab: "%m/%d/%Y"
+  invisible_captcha:
+    sentence_for_humans: "If you are human, please ignore this field."
+    timestamp_error_message: "Please wait a couple seconds and resubmit the form."
